# ai-care-advocate

./: .env.example  .gitignore  README.md  WRITE.md  WRITEUP.md  feature1.txt  main.py  pyproject.toml
.cursor/skills/pcp-event-agent/: SKILL.md  examples.md
data/fixtures/: pcp_action_weights.json  pcp_initial.txt  pcp_outcome_pool.json  pcp_transcripts.json
data/fixtures/agent_golden/: turn1_decision.json  turn1_prior_state.json  turn2_decision.json
data/fixtures/extract/: turn2_order_in_progress.txt  turn3_no_answer.txt  turn4_still_stalled.txt  turn5_confirmed_k0001.txt  turn6_wrong_code_k0002.txt
data/fixtures/extract/prior_states/: turn2_prior.json  turn3_prior.json  turn4_prior.json  turn5_prior.json
data/output/: agent_decision.json  eleanor-martinez_state.json  pcp_call_recordings.csv  pcp_communication_state.json  pcp_events.jsonl
pcp_agent/: README.md  __init__.py  graph.py  llm_extract.py  merge.py  patient.py  persistence.py  rules.py  run_turn.py  state.py
src/pcp/: cli.py  persistence.py
src/pcp/agents/: __init__.py  apply.py  models.py
src/pcp/analyzers/: base.py  scripted.py
src/pcp/engine/: __init__.py  actions.py  engine.py  models.py  state_machine.py
src/pcp/generators/: __init__.py  base.py  stochastic.py
src/shared/: models.py
tests/: test_pcp_actions.py  test_pcp_agent_rules.py  test_pcp_agent_skill.py  test_pcp_agent_state.py  test_pcp_analyzer.py  test_pcp_engine.py  test_pcp_models.py  test_pcp_persistence.py  test_pcp_state_machine.py  test_pcp_stochastic_generator.py
