[project]
name = "miramace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.18",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
